--- a/client/app/answer_poll/answer_poll_list.jade
+++ b/client/app/answer_poll/answer_poll_list.jade
@@ -8,5 +8,4 @@ div(ng-include='"components/navbar/navbar.html"')
         |  "
         span(ng-bind-html="poll.name")
         |"
-.footer
-  | Foo bar
+div(ng-include='"components/footer/footer.html"')
