--- a/client/app/view_answers/view_answers.jade
+++ b/client/app/view_answers/view_answers.jade
@@ -22,5 +22,4 @@ div(ng-include='"components/navbar/navbar.html"')
             td {{ ans.goodAnswers }} / {{ ans.poll.questions.length }}
     p(ng-if='!answers' translate) No answers yet.
     md-data-table-pagination
-.footer
-  | Foo bar
+div(ng-include='"components/footer/footer.html"')
