--- a/client/app/upload/input-file.jade
+++ b/client/app/upload/input-file.jade
@@ -2,10 +2,9 @@ div(ng-if="picFile")
   md-button(ng-click='uploadFile()' ng-show='picFile' ng-disabled='uploading')
     md-icon.glyphicon.glyphicon-upload
     span(translate-context='button') {{ uploadButtonMessage }}
-  md-button(ng-click='showCropper()')
-    span(translate) Crop
-  img(ng-src="{{picFile | ngfDataUrl}}" width="100%"
-    ng-cropper=""
-    ng-cropper-options="options"
-    ng-cropper-show="showEvent"
-    ng-cropper-hide="hideEvent")
+  div(width="90%")
+    img(ng-src="{{picFile | ngfDataUrl}}" width="100%"
+      ng-cropper=""
+      ng-cropper-options="options"
+      ng-cropper-show="showEvent"
+      ng-cropper-hide="hideEvent")
