set default size to 14px instead of 13px

--- a/client/app/edit_poll/edit/inline.jade
+++ b/client/app/edit_poll/edit/inline.jade
@@ -1,4 +1,4 @@
 div
   ng-quill-editor(ng-model='q.question' toolbar="true" link-tooltip="true"
     toolbar-entries="size bold list bullet italic underline strike align color background link image"
-    editor-required="true" required="" error-class="input-error")
+    editor-required="true" required="")
