--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -7,15 +7,15 @@ div(ng-include='"components/navbar/navbar.html"')
     .col-sm-12
       form.form(name='form', ng-submit='login(form)', novalidate='')
         .form-group
-          label(translate) Email
-          input.form-control(type='text', name='email', ng-model='user.email')
+          label(translate) User name
+          input.form-control(type='text', name='username', ng-model='user.username' placeholder='{{ "Surname Name" | translate }}')
         .form-group
           label(translate) Password
           input.form-control(type='password', name='password', ng-model='user.password')
 
         .form-group.has-error
-          p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-            span(translate) Please enter your email and password.
+          p.help-block(ng-show='form.username.$error.required && form.password.$error.required && submitted')
+            span(translate) Please enter your username and password.
           p.help-block {{ errors.other }}
 
         div
