--- a/client/app/polls/polls.scss
+++ b/client/app/polls/polls.scss
@@ -1,4 +1,4 @@
-@import url("../../bower_components/angular-material/angular-material.scss");
+@import 'angular-material/angular-material.scss';
 
 .goodAnswer {
   background-color: red;
